# module-37_task-3

./: CMakeLists.txt  RemoteController.ui  readme.md
include/: remotecontrollermainwindow.h
src/: CMakeLists.txt  main.cpp  remotecontrollermainwindow.cpp
